# sourcemanager

./: .coverage  .gitignore  README.md  docker-compose.yml  pyproject.toml
sourcemanager/: __init__.py  main.py
src/: app.py  database.py  forms.py  init_db.py  models.py
src/templates/: add_reference.html  index.html  search.html
static/: styles.css
templates/: index.html
templates/src/: app.py
